--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <!-- モバイル対応 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>キャラクター強化チェッカー</title>
+  <title>争覇内政チェッカー</title>
   <!-- 既存CSS -->
   <link rel="stylesheet" href="style.css">
   <!-- 横並び用の上書きスタイル -->
@@ -37,12 +37,12 @@
 </head>
 <body>
   <header>
-    <h1>キャラクター強化チェッカー</h1>
+    <h1>争覇内政チェッカー</h1>
   </header>
 
   <main>
     <section>
-      <p>強化対象のキャラクターを選択してください：</p>
+      <p>編成した武将を選択してください：</p>
       <div class="select-container">
         <span class="select-block">
           <select id="charSelect1">
@@ -72,7 +72,7 @@
     </section>
 
     <section>
-      <h2>強化可能キャラクター</h2>
+      <h2>対象内政スキル持ち武将</h2>
       <ul id="resultList"></ul>
     </section>
   </main>
