--- a/index.html
+++ b/index.html
@@ -81,5 +81,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
   <!-- アプリ本体 -->
   <script src="app.js"></script>
+    <footer>
+    <small>© 麗獏一家 Layback Family room585</small>
+  </footer>
 </body>
 </html>
