--- a/index.html
+++ b/index.html
@@ -5,32 +5,130 @@
   <!-- モバイル対応 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>争覇内政チェッカー</title>
-  <!-- 既存CSS -->
-  <link rel="stylesheet" href="style.css">
-  <!-- 横並び用の上書きスタイル -->
   <style>
-    /* select を包むコンテナをフレックスに */
-    .select-container {
+    /* ────────────── ベースリセット ────────────── */
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+
+    /* ────────────── ページ全体のレイアウト ────────────── */
+    body {
       display: flex;
-      gap: 20px;           /* 各ブロックの間隔 */
-      flex-wrap: nowrap;   /* 折り返しを禁止（常に１行） */
+      flex-direction: column;
+      min-height: 100vh;
+      padding: 20px;
+      font-family: sans-serif;
+      line-height: 1.6;
+      background: #f5f7fa;
+      color: #333;
+    }
+    main {
+      flex: 1;                /* フッターを下に固定するための伸縮領域 */
+      max-width: 960px;
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    /* ────────────── ヘッダー ────────────── */
+    header {
+      display: flex;
+      justify-content: space-between;
       align-items: flex-start;
+      flex-wrap: wrap;        /* ブラウザ幅が狭くなったら折り返しOK */
       margin-bottom: 1em;
     }
-    /* 各ブロックの基本幅 */
-    .select-block {
-      flex: 1 1 auto;      /* 必要に応じて縮小・拡大 */
-      min-width: 160px;     /* 小さくなりすぎない幅 */
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+      color: #005fcc;
     }
-    /* 既存のメディアクエリで block になってしまう場合への強制上書き */
+
+    /* ────────────── セレクト群 ────────────── */
+    .select-container {
+      display: flex;
+      gap: 20px;
+      flex-wrap: nowrap;      /* デフォルトで横並び */
+      align-items: flex-start;
+      margin-bottom: 1.5em;
+    }
+    .select-block {
+      flex: 1 1 auto;
+      min-width: 160px;
+    }
+    .select-block select {
+      width: 100%;
+      padding: 0.4em 0.6em;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    .char-info {
+      margin-top: 0.4em;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    /* ────────────── 結果リスト ────────────── */
+    #resultList {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    #resultList li {
+      margin-bottom: 0.8em;
+      background: #fff;
+      padding: 0.8em;
+      border-radius: 6px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+      transition: transform .2s, box-shadow .2s;
+    }
+    #resultList li:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    #resultList li h2 {
+      margin: 0 0 0.4em;
+      font-size: 1.1rem;
+      color: #005fcc;
+    }
+    #resultList li p {
+      margin: 0;
+      font-size: 0.95rem;
+      color: #555;
+    }
+
+    /* ────────────── フッター ────────────── */
+    footer {
+      text-align: center;
+      padding: 1em 0;
+      font-size: 0.9rem;
+      color: #666;
+      border-top: 1px solid #ddd;
+      background: #ececec;
+    }
+
+    /* ────────────── モバイル対応 (600px以下) ────────────── */
     @media (max-width: 600px) {
-      .select-block {
-        display: inline-block !important;
-        width: auto         !important;
-        margin-right: 0     !important;
+      header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
       }
-      .select-block select {
-        width: auto         !important;
+      header h1 {
+        margin-bottom: 0.8em;
+      }
+      .select-container {
+        flex-direction: column;
+        align-items: stretch;
+        gap: 1em;
+      }
+      .select-block {
+        min-width: 0;
       }
     }
   </style>
@@ -44,30 +142,30 @@
     <section>
       <p>編成した武将を選択してください：</p>
       <div class="select-container">
-        <span class="select-block">
+        <div class="select-block">
           <select id="charSelect1">
             <option value="">──選択してください──</option>
           </select>
           <div id="charInfo1" class="char-info"></div>
-        </span>
-        <span class="select-block">
+        </div>
+        <div class="select-block">
           <select id="charSelect2">
             <option value="">──選択してください──</option>
           </select>
           <div id="charInfo2" class="char-info"></div>
-        </span>
-        <span class="select-block">
+        </div>
+        <div class="select-block">
           <select id="charSelect3">
             <option value="">──選択してください──</option>
           </select>
           <div id="charInfo3" class="char-info"></div>
-        </span>
-        <span class="select-block">
+        </div>
+        <div class="select-block">
           <select id="charSelect4">
             <option value="">──選択してください──</option>
           </select>
           <div id="charInfo4" class="char-info"></div>
-        </span>
+        </div>
       </div>
     </section>
 
@@ -77,12 +175,11 @@
     </section>
   </main>
 
+  <footer>© 麗獏一家 Layback Family room585</footer>
+
   <!-- CSVパース用ライブラリ -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
   <!-- アプリ本体 -->
   <script src="app.js"></script>
-    <footer>
-    <small>© 麗獏一家 Layback Family room585</small>
-  </footer>
 </body>
 </html>
